--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -8,7 +8,10 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "test:unit": "vitest",
+    "test:e2e": "playwright test",
+    "pw:install": "npx playwright install --with-deps"
   },
   "dependencies": {
     "axios": "^1.11.0",
@@ -30,6 +33,9 @@
     "globals": "^16.3.0",
     "vite": "^5.2.11",
     "jsdom": "^22.1.0",
-    "vitest": "^0.34.0"
+    "vitest": "^0.34.0",
+    "msw": "^1.2.1",
+    "@playwright/test": "^1.39.0",
+    "playwright": "^1.39.0"
   }
 }
